--- a/StoreSales/StoreSales_Competition2.ipynb
+++ b/StoreSales/StoreSales_Competition2.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +190,7 @@
        "4   4 2013-01-01          1       BOOKS    0.0            0"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +336,7 @@
        "onpromotion  0.206260   0.007286  0.427923     1.000000"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -355,24 +355,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(3000888, 33) \n",
-      " [[1. 0. 0. ... 0. 0. 0.]\n",
-      " [0. 1. 0. ... 0. 0. 0.]\n",
-      " [0. 0. 1. ... 0. 0. 0.]\n",
-      " ...\n",
-      " [0. 0. 0. ... 1. 0. 0.]\n",
-      " [0. 0. 0. ... 0. 1. 0.]\n",
-      " [0. 0. 0. ... 0. 0. 1.]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Integer encode\n",
     "label_encoderF = LabelEncoder()\n",
@@ -387,216 +372,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>AUTOMOTIVE</th>\n",
-       "      <th>BABY CARE</th>\n",
-       "      <th>BEAUTY</th>\n",
-       "      <th>BEVERAGES</th>\n",
-       "      <th>BOOKS</th>\n",
-       "      <th>BREAD/BAKERY</th>\n",
-       "      <th>CELEBRATION</th>\n",
-       "      <th>CLEANING</th>\n",
-       "      <th>DAIRY</th>\n",
-       "      <th>DELI</th>\n",
-       "      <th>...</th>\n",
-       "      <th>MAGAZINES</th>\n",
-       "      <th>MEATS</th>\n",
-       "      <th>PERSONAL CARE</th>\n",
-       "      <th>PET SUPPLIES</th>\n",
-       "      <th>PLAYERS AND ELECTRONICS</th>\n",
-       "      <th>POULTRY</th>\n",
-       "      <th>PREPARED FOODS</th>\n",
-       "      <th>PRODUCE</th>\n",
-       "      <th>SCHOOL AND OFFICE SUPPLIES</th>\n",
-       "      <th>SEAFOOD</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 33 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   AUTOMOTIVE  BABY CARE  BEAUTY  BEVERAGES  BOOKS  BREAD/BAKERY  CELEBRATION  \\\n",
-       "0         1.0        0.0     0.0        0.0    0.0           0.0          0.0   \n",
-       "1         0.0        1.0     0.0        0.0    0.0           0.0          0.0   \n",
-       "2         0.0        0.0     1.0        0.0    0.0           0.0          0.0   \n",
-       "3         0.0        0.0     0.0        1.0    0.0           0.0          0.0   \n",
-       "4         0.0        0.0     0.0        0.0    1.0           0.0          0.0   \n",
-       "\n",
-       "   CLEANING  DAIRY  DELI  ...  MAGAZINES  MEATS  PERSONAL CARE  PET SUPPLIES  \\\n",
-       "0       0.0    0.0   0.0  ...        0.0    0.0            0.0           0.0   \n",
-       "1       0.0    0.0   0.0  ...        0.0    0.0            0.0           0.0   \n",
-       "2       0.0    0.0   0.0  ...        0.0    0.0            0.0           0.0   \n",
-       "3       0.0    0.0   0.0  ...        0.0    0.0            0.0           0.0   \n",
-       "4       0.0    0.0   0.0  ...        0.0    0.0            0.0           0.0   \n",
-       "\n",
-       "   PLAYERS AND ELECTRONICS  POULTRY  PREPARED FOODS  PRODUCE  \\\n",
-       "0                      0.0      0.0             0.0      0.0   \n",
-       "1                      0.0      0.0             0.0      0.0   \n",
-       "2                      0.0      0.0             0.0      0.0   \n",
-       "3                      0.0      0.0             0.0      0.0   \n",
-       "4                      0.0      0.0             0.0      0.0   \n",
-       "\n",
-       "   SCHOOL AND OFFICE SUPPLIES  SEAFOOD  \n",
-       "0                         0.0      0.0  \n",
-       "1                         0.0      0.0  \n",
-       "2                         0.0      0.0  \n",
-       "3                         0.0      0.0  \n",
-       "4                         0.0      0.0  \n",
-       "\n",
-       "[5 rows x 33 columns]"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Rename\n",
     "onehot_encodedF = pd.DataFrame(onehot_encodedF)\n",
@@ -613,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -825,7 +603,7 @@
        "[5 rows x 38 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -847,24 +625,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(3000888, 54) \n",
-      " [[1. 0. 0. ... 0. 0. 0.]\n",
-      " [1. 0. 0. ... 0. 0. 0.]\n",
-      " [1. 0. 0. ... 0. 0. 0.]\n",
-      " ...\n",
-      " [0. 0. 0. ... 0. 0. 0.]\n",
-      " [0. 0. 0. ... 0. 0. 0.]\n",
-      " [0. 0. 0. ... 0. 0. 0.]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Convert to numpy\n",
     "integer_encodedS = np.array(train['store_nbr'])\n",
@@ -878,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1083,7 +846,7 @@
        "[5 rows x 91 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1109,7 +872,263 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Make 'date' as an index\n",
+    "train = pd.DataFrame(train)\n",
+    "train = train.set_index('date')\n",
+    "train = train.to_period('D')\n",
+    "print(train.shape, train.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3000888, 94)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>sales</th>\n",
+       "      <th>onpromotion</th>\n",
+       "      <th>AUTOMOTIVE</th>\n",
+       "      <th>BABY CARE</th>\n",
+       "      <th>BEAUTY</th>\n",
+       "      <th>BEVERAGES</th>\n",
+       "      <th>BOOKS</th>\n",
+       "      <th>BREAD/BAKERY</th>\n",
+       "      <th>CELEBRATION</th>\n",
+       "      <th>...</th>\n",
+       "      <th>48</th>\n",
+       "      <th>49</th>\n",
+       "      <th>50</th>\n",
+       "      <th>51</th>\n",
+       "      <th>52</th>\n",
+       "      <th>53</th>\n",
+       "      <th>day</th>\n",
+       "      <th>week</th>\n",
+       "      <th>dayofyear</th>\n",
+       "      <th>year</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2013-01-01</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2013</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2013-01-01</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2013</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2013-01-01</th>\n",
+       "      <td>2</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2013</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2013-01-01</th>\n",
+       "      <td>3</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2013</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2013-01-01</th>\n",
+       "      <td>4</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2013</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 94 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            id  sales  onpromotion  AUTOMOTIVE  BABY CARE  BEAUTY  BEVERAGES  \\\n",
+       "date                                                                           \n",
+       "2013-01-01   0    0.0            0         1.0        0.0     0.0        0.0   \n",
+       "2013-01-01   1    0.0            0         0.0        1.0     0.0        0.0   \n",
+       "2013-01-01   2    0.0            0         0.0        0.0     1.0        0.0   \n",
+       "2013-01-01   3    0.0            0         0.0        0.0     0.0        1.0   \n",
+       "2013-01-01   4    0.0            0         0.0        0.0     0.0        0.0   \n",
+       "\n",
+       "            BOOKS  BREAD/BAKERY  CELEBRATION  ...   48   49   50   51   52  \\\n",
+       "date                                          ...                            \n",
+       "2013-01-01    0.0           0.0          0.0  ...  0.0  0.0  0.0  0.0  0.0   \n",
+       "2013-01-01    0.0           0.0          0.0  ...  0.0  0.0  0.0  0.0  0.0   \n",
+       "2013-01-01    0.0           0.0          0.0  ...  0.0  0.0  0.0  0.0  0.0   \n",
+       "2013-01-01    0.0           0.0          0.0  ...  0.0  0.0  0.0  0.0  0.0   \n",
+       "2013-01-01    1.0           0.0          0.0  ...  0.0  0.0  0.0  0.0  0.0   \n",
+       "\n",
+       "             53  day  week  dayofyear  year  \n",
+       "date                                         \n",
+       "2013-01-01  0.0    1     1          1  2013  \n",
+       "2013-01-01  0.0    1     1          1  2013  \n",
+       "2013-01-01  0.0    1     1          1  2013  \n",
+       "2013-01-01  0.0    1     1          1  2013  \n",
+       "2013-01-01  0.0    1     1          1  2013  \n",
+       "\n",
+       "[5 rows x 94 columns]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Split 'date' into detailed features\n",
+    "train[\"day\"] = train.index.dayofweek\n",
+    "train[\"week\"] = train.index.week\n",
+    "train[\"dayofyear\"] = train.index.dayofyear\n",
+    "train[\"year\"] = train.index.year\n",
+    "\n",
+    "print(train.shape)\n",
+    "train.head()"
+   ]
   },
   {
    "cell_type": "markdown",
