--- a/StoreSales/StoreSales_Competition2.ipynb
+++ b/StoreSales/StoreSales_Competition2.ipynb
@@ -1134,15 +1134,500 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5. Split *train* dataset to *ourtrain* and *ourtest*"
+    "## 5. Split *train* dataset into *ourtrain* and *ourtest*"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3000888\n"
+     ]
+    }
+   ],
+   "source": [
+    "ourtrain = train[train.index < '2017-01-01']    # 2013-01-01 ~ 2016-12-31\n",
+    "ourtest = train[train.index > '2016-12-31']     # 2017-01-01 ~ 2017-08-15\n",
+    "\n",
+    "print(len(ourtrain)+len(ourtest))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>sales</th>\n",
+       "      <th>onpromotion</th>\n",
+       "      <th>AUTOMOTIVE</th>\n",
+       "      <th>BABY CARE</th>\n",
+       "      <th>BEAUTY</th>\n",
+       "      <th>BEVERAGES</th>\n",
+       "      <th>BOOKS</th>\n",
+       "      <th>BREAD/BAKERY</th>\n",
+       "      <th>CELEBRATION</th>\n",
+       "      <th>...</th>\n",
+       "      <th>48</th>\n",
+       "      <th>49</th>\n",
+       "      <th>50</th>\n",
+       "      <th>51</th>\n",
+       "      <th>52</th>\n",
+       "      <th>53</th>\n",
+       "      <th>day</th>\n",
+       "      <th>week</th>\n",
+       "      <th>dayofyear</th>\n",
+       "      <th>year</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2013-01-01</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2013</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2013-01-01</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2013</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2013-01-01</th>\n",
+       "      <td>2</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2013</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2013-01-01</th>\n",
+       "      <td>3</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2013</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2013-01-01</th>\n",
+       "      <td>4</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2013</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 94 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            id  sales  onpromotion  AUTOMOTIVE  BABY CARE  BEAUTY  BEVERAGES  \\\n",
+       "date                                                                           \n",
+       "2013-01-01   0    0.0            0         1.0        0.0     0.0        0.0   \n",
+       "2013-01-01   1    0.0            0         0.0        1.0     0.0        0.0   \n",
+       "2013-01-01   2    0.0            0         0.0        0.0     1.0        0.0   \n",
+       "2013-01-01   3    0.0            0         0.0        0.0     0.0        1.0   \n",
+       "2013-01-01   4    0.0            0         0.0        0.0     0.0        0.0   \n",
+       "\n",
+       "            BOOKS  BREAD/BAKERY  CELEBRATION  ...   48   49   50   51   52  \\\n",
+       "date                                          ...                            \n",
+       "2013-01-01    0.0           0.0          0.0  ...  0.0  0.0  0.0  0.0  0.0   \n",
+       "2013-01-01    0.0           0.0          0.0  ...  0.0  0.0  0.0  0.0  0.0   \n",
+       "2013-01-01    0.0           0.0          0.0  ...  0.0  0.0  0.0  0.0  0.0   \n",
+       "2013-01-01    0.0           0.0          0.0  ...  0.0  0.0  0.0  0.0  0.0   \n",
+       "2013-01-01    1.0           0.0          0.0  ...  0.0  0.0  0.0  0.0  0.0   \n",
+       "\n",
+       "             53  day  week  dayofyear  year  \n",
+       "date                                         \n",
+       "2013-01-01  0.0    1     1          1  2013  \n",
+       "2013-01-01  0.0    1     1          1  2013  \n",
+       "2013-01-01  0.0    1     1          1  2013  \n",
+       "2013-01-01  0.0    1     1          1  2013  \n",
+       "2013-01-01  0.0    1     1          1  2013  \n",
+       "\n",
+       "[5 rows x 94 columns]"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ourtrain.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>sales</th>\n",
+       "      <th>onpromotion</th>\n",
+       "      <th>AUTOMOTIVE</th>\n",
+       "      <th>BABY CARE</th>\n",
+       "      <th>BEAUTY</th>\n",
+       "      <th>BEVERAGES</th>\n",
+       "      <th>BOOKS</th>\n",
+       "      <th>BREAD/BAKERY</th>\n",
+       "      <th>CELEBRATION</th>\n",
+       "      <th>...</th>\n",
+       "      <th>48</th>\n",
+       "      <th>49</th>\n",
+       "      <th>50</th>\n",
+       "      <th>51</th>\n",
+       "      <th>52</th>\n",
+       "      <th>53</th>\n",
+       "      <th>day</th>\n",
+       "      <th>week</th>\n",
+       "      <th>dayofyear</th>\n",
+       "      <th>year</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2017-01-01</th>\n",
+       "      <td>2596374</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>52</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2017</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-01-01</th>\n",
+       "      <td>2596375</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>52</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2017</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-01-01</th>\n",
+       "      <td>2596376</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>52</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2017</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-01-01</th>\n",
+       "      <td>2596377</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>52</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2017</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-01-01</th>\n",
+       "      <td>2596378</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>52</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2017</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 94 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 id  sales  onpromotion  AUTOMOTIVE  BABY CARE  BEAUTY  \\\n",
+       "date                                                                     \n",
+       "2017-01-01  2596374    0.0            0         1.0        0.0     0.0   \n",
+       "2017-01-01  2596375    0.0            0         0.0        1.0     0.0   \n",
+       "2017-01-01  2596376    0.0            0         0.0        0.0     1.0   \n",
+       "2017-01-01  2596377    0.0            0         0.0        0.0     0.0   \n",
+       "2017-01-01  2596378    0.0            0         0.0        0.0     0.0   \n",
+       "\n",
+       "            BEVERAGES  BOOKS  BREAD/BAKERY  CELEBRATION  ...   48   49   50  \\\n",
+       "date                                                     ...                  \n",
+       "2017-01-01        0.0    0.0           0.0          0.0  ...  0.0  0.0  0.0   \n",
+       "2017-01-01        0.0    0.0           0.0          0.0  ...  0.0  0.0  0.0   \n",
+       "2017-01-01        0.0    0.0           0.0          0.0  ...  0.0  0.0  0.0   \n",
+       "2017-01-01        1.0    0.0           0.0          0.0  ...  0.0  0.0  0.0   \n",
+       "2017-01-01        0.0    1.0           0.0          0.0  ...  0.0  0.0  0.0   \n",
+       "\n",
+       "             51   52   53  day  week  dayofyear  year  \n",
+       "date                                                   \n",
+       "2017-01-01  0.0  0.0  0.0    6    52          1  2017  \n",
+       "2017-01-01  0.0  0.0  0.0    6    52          1  2017  \n",
+       "2017-01-01  0.0  0.0  0.0    6    52          1  2017  \n",
+       "2017-01-01  0.0  0.0  0.0    6    52          1  2017  \n",
+       "2017-01-01  0.0  0.0  0.0    6    52          1  2017  \n",
+       "\n",
+       "[5 rows x 94 columns]"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ourtest.head()"
+   ]
   },
   {
    "cell_type": "markdown",
