--- a/StoreSales/StoreSales_Competition2.ipynb
+++ b/StoreSales/StoreSales_Competition2.ipynb
@@ -1637,6 +1637,102 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1) Trend"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Fit data to trend model\n",
+    "def trend(ourtrain, ourtest, error):  \n",
+    "\n",
+    "    # Targets\n",
+    "    y_train = ourtrain['sales']\n",
+    "    y_test = ourtest['sales']\n",
+    "    \n",
+    "    # Create features\n",
+    "    trend_dp = DeterministicProcess(\n",
+    "    index=ourtrain.index,   # dates from the training data\n",
+    "    constant=True,       # dummy feature for the bias (y_intercept)\n",
+    "    order=2,             # the time dummy (trend)\n",
+    "    drop=True,           # drop terms if necessary to avoid collinearity\n",
+    "    )\n",
+    "\n",
+    "    # `in_sample` creates features for the dates given in the `index` argument\n",
+    "    X_train = trend_dp.in_sample()\n",
+    "\n",
+    "    # Fit model\n",
+    "    model = LinearRegression(fit_intercept=False)\n",
+    "    model.fit(X_train, y_train)\n",
+    "\n",
+    "    # Out of Sample \n",
+    "    X_oos = trend_dp.out_of_sample(steps=len(ourtest.index))\n",
+    "    y_fore = pd.Series(model.predict(X_oos), index=X_oos.index)\n",
+    "\n",
+    "    return error(y_fore, y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total Error from Trend model:  3.6687\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Compute errors\n",
+    "trend_error = trend(ourtrain, ourtest, error)\n",
+    "print(\"Total Error from Trend model: \", round(trend_error, 4))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2) Periodogram"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3) Cycles"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4) Hybrid"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
